# CHiME9-ECHI

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  LICENSE  README.md  enhance.sh  environment.yaml  environment2.yaml  evaluation.sh  install.sh  pyproject.toml  requirements.txt  run.py  run_enhancement.py  run_evaluation.py  run_evaluation_parallel.sh  run_inference.py  run_parallel_local.sh  run_parallel_slurm.sh  run_slurm.py  run_train.py  validation.sh
checkpoints/: aria_config.yaml  ha_config.yaml
config/: evaluate.yaml  inference.yaml  main.yaml  metrics.yaml  metrics_test.yaml  paths.yaml  prepare.yaml  report.yaml  setup.yaml  shared.yaml  validate.yaml
config/enhancement/: enhance.yaml  main.yaml  resample.yaml
config/evaluation/: enhance.yaml  evaluate.yaml  main.yaml  metrics.yaml  metrics_quick.yaml  prepare.yaml  report.yaml  setup.yaml  validate.yaml
config/inference/: main.yaml
docs/: enhancement.md  evaluation.md  training.md
enhancement_plugins/: example.py
scripts/: dummy_enhance.py  dummy_inference.py  evaluate.py  make_dummy_submission.sh  prepare.py  report.py  setup.py  validate.py
src/: signal_tools.py
stanage_logs/: error_7555201.err  error_7580641.err  error_7580717.err  error_7583082.err  error_7583389.err  output_7555201.out  output_7580641.out  output_7580717.out  output_7583082.out  output_7583389.out  validation_error_7583442.err  validation_error_7583509.err  validation_error_7587269.err  validation_error_7587511.err  validation_output_7587269.out  validation_output_7587511.out
tools/: NISQA
(+54 files in other folders)
